test/functions/ferguson/ref-pair/const-error-iterated.good
const-error-iterated.chpl:69: error: const actual is passed to 'ref' formal 'A' of writeForA()
const-error-iterated.chpl:11: note: to ref formal here
const-error-iterated.chpl:12: note: passed as ref here
const-error-iterated.chpl:13: note: passed as ref here
const-error-iterated.chpl:3: note: to ref formal here
const-error-iterated.chpl:70: error: const actual is passed to 'ref' formal 'A' of writeForallA()
const-error-iterated.chpl:16: note: to ref formal here
const-error-iterated.chpl:17: note: passed as ref here
const-error-iterated.chpl:17: note: passed as ref here
const-error-iterated.chpl:18: note: passed as ref here
const-error-iterated.chpl:3: note: to ref formal here
const-error-iterated.chpl:71: error: const actual is passed to 'ref' formal 'A' of promotedAssign()
const-error-iterated.chpl:21: note: to ref formal here
const-error-iterated.chpl:22: note: passed as ref here
const-error-iterated.chpl:72: error: const actual is passed to 'ref' formal 'A' of writeCoforallA()
const-error-iterated.chpl:25: note: to ref formal here
const-error-iterated.chpl:26: note: passed as ref here
const-error-iterated.chpl:26: note: passed as ref here
const-error-iterated.chpl:26: note: passed as ref here
const-error-iterated.chpl:26: note: passed as ref here
const-error-iterated.chpl:26: note: passed as ref here
const-error-iterated.chpl:26: note: to ref formal here
const-error-iterated.chpl:27: note: passed as ref here
const-error-iterated.chpl:3: note: to ref formal here
